--- a/app/views/missions/index.html.erb
+++ b/app/views/missions/index.html.erb
@@ -1,1 +1,12 @@
+<div class="float-right">
+<h1>Top page</h1>
+<%= link_to '新規作成', new_mission_path %>
+<div class="missions float-right " >
+  <div class="row">
+
+        <%= render partial: "mission", collection: @missions %>
+
+  </div>
+</div>
+</div>
 
