--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -1,17 +1,8 @@
-html, body {
-  height: 100%;
-  width: 100%;
-  padding: 0%;
-  margin: 0%;
 
+
+body {
+  background-color: lightblue;
 }
-
-.sidebar {
-  top:0;
-  left: 0;
-  height: 100%;
-}
-
 
 /*サイドバー*/
 
