--- a/app/views/missions/edit.html.erb
+++ b/app/views/missions/edit.html.erb
@@ -1,6 +1,7 @@
 <div class="contents row">
   <div class="container">
     <h3>編集する</h3>
-    <%= render partial: "form", locals: { tweet: @mission } %>
+    <%= render partial: "editform", locals: { tweet: @mission } %>
   </div>
 </div>
+
