--- a/app/views/missions/new.html.erb
+++ b/app/views/missions/new.html.erb
@@ -1,6 +1,6 @@
 <div class="contents row">
   <div class="container">
-    <h3>投稿する</h3>
+    <h3>課題設定画面</h3>
     <%= render partial: "form", locals: { tweet: @mission } %>
   </div>
 </div>
