--- a/app/views/missions/_form.html.erb
+++ b/app/views/missions/_form.html.erb
@@ -1,11 +1,10 @@
-
     <%= form_with(model: @mission, local: true) do |form| %>
-      <div class="mb-3">
+         <div class="mb-3">
         <label  class="form-label">課題を設定しよう！</label>
-        <%= form.text_field :mission, class:"form-control",placeholder: "text", rows: "10" %>
+        <%= form.text_field :mission, class:"form-control",placeholder: "例:勉強に集中できない", rows: "10" %>
       </div>
       <div class="mb-3">
-        <label  class="form-label">開始日</label>
+        <label  class="form-label">設定日</label>
         <%= form.date_field :startdate,class:"form-control", placeholder: "始まり" %>
       </div>
 
@@ -20,6 +19,3 @@
         <%= form.submit "SEND",class: "btn btn-primary" %>
       </div>
     <% end %>
-
-   
-  
