--- a/app/views/tasks/_taskform.html.erb
+++ b/app/views/tasks/_taskform.html.erb
@@ -1,5 +1,5 @@
 
-    <%= form_with(model:  @task, local: true) do |form| %>
+    <%= form_with(model:  [@mission, @task] local: true) do |form| %>
       <div class="mb-3">
         <label  class="form-label">taskを設定しよう！</label>
         <%= form.text_field :task, class:"form-control",placeholder: "図書館に行って勉強する", rows: "3" %>
