--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,12 +21,27 @@
 <nav class="navbar navbar-light bg-light shadow fixed-top">
   <div class="container-fluid">
     <%= link_to 'navbar', root_path, class: "navbar-brand"%>
+            <% if user_signed_in? %>
+          <div class="user_nav grid-6">
+            <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+                      </div>
+        <% else %>
+          <div class="grid-6">
+            <%= link_to "ログイン", new_user_session_path, class: "post" %>
+            <%= link_to "新規登録", new_user_registration_path, class: "post"%>
+          </div>
+        <% end %>
   </div>
 </nav>
 </header>
 
 <main>
-
+<%# <p>jquery導入確認用</p>
+<script type="text/javascript">
+  $(document).ready(function() {
+    $("p").text("成功！！");
+  });
+</script> %>
 
 
  <div class="content">
