--- a/app/views/missions/_mission.html.erb
+++ b/app/views/missions/_mission.html.erb
@@ -35,6 +35,7 @@
   
 
         <p class="card-text text-right"></p>
+    <% if user_signed_in? && current_user.id == mission.user.id %>
         <% if mission.tasks.present? %>
           <%= link_to 'タスクを追加', mission_path(mission.id),method: :get, class: "btn btn-primary"%>
         <% else %>
@@ -42,6 +43,7 @@
         <% end %>
         <%= link_to '編集', edit_mission_path(mission.id),method: :get, class: "btn btn-primary"%>
         <%= link_to '削除', mission_path(mission.id),method: :delete, class: "btn btn-primary"%>
+    <% end %>
        </div>
     </div>
   </div>
