--- a/app/views/missions/index.html.erb
+++ b/app/views/missions/index.html.erb
@@ -3,12 +3,19 @@
   <div class="mb-3">
     <h1 class="top">Mission List</h1>
   </div>
-<% unless user_signed_in? %>
-<% else %>
-  <div class="mb-3">
-    <%= link_to 'missionを設定', new_mission_path, class: "btn btn-primary" %>
-  </div>
-<% end %>
+
+<div class="row">
+   <% unless user_signed_in? %>
+   <% else %>
+     <div class="col-sm-10">
+        <%= link_to 'missionを設定', new_mission_path, class: "btn btn-primary" %>
+               <%= link_to "マイページ", "/users/#{current_user.id}", class: "btn btn-primary"%>
+
+     </div>
+     <div class="col-sm-2">
+     </div>
+     <% end %>
+</div>
   
   <div class="missions float-right " >
    <div class="row">
