--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
 <header>
 <nav class="navbar navbar-dark shadow fixed-top" style="background-color:#000033;" >
   <div class="container-fluid">
-    <%= link_to 'Meta Helper', root_path, class: "navbar-brand"%>
+    <%= link_to 'addtaskii', root_path, class: "navbar-brand"%>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
