ビューの調整

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>MetaHelper</title>
+    <title>addtaskii</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -70,6 +70,9 @@
      <%= yield %>
 
   </div>
+ 
+  
+
  </div>
  
 
