--- a/app/views/missions/index.html.erb
+++ b/app/views/missions/index.html.erb
@@ -1,28 +1,37 @@
 
 <div>
   <div class="mb-3">
+  <% unless user_signed_in? %>
+    <h1 class="mypage-title"></span>addtaskiiとあなたの友達があなたの課題解決のサポートします。 </h1>  
+  <% else %>
     <h1 class="top">Mission List</h1>
+  <% end %>
   </div>
 
 <div class="row">
    <% unless user_signed_in? %>
+
+   <div class="d-grid gap-2">
+     <%= link_to "ログイン", new_user_session_path, class: "btn btn-primary" %>
+     <%= link_to "登録がお済みでない方はこちら", new_user_registration_path, class: "btn btn-primary"%>
+  </div>
+   
+
    <% else %>
      <div class="col-sm-10">
-        <%= link_to 'missionを設定', new_mission_path, class: "btn btn-primary" %>
-               <%= link_to "マイページ", "/users/#{current_user.id}", class: "btn btn-primary"%>
-
+     <%= link_to 'missionを設定', new_mission_path, class: "btn btn-primary" %>
+     <%= link_to "マイページ", "/users/#{current_user.id}", class: "btn btn-success"%>
      </div>
-     <div class="col-sm-2">
-     </div>
-     <% end %>
-</div>
-  
-  <div class="missions float-right " >
+       <div class="missions float-right " >
    <div class="row">
 
         <%= render partial: "mission", collection: @missions %>
 
   </div>
 </div>
+     <% end %>
+</div>
+  
+
 </div>
 
