--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,7 +14,7 @@
 <% end %>
 
   <% @missions.each do |mission| %>
-  <div class="col-md-12 pt-3  ">
+  <div class="col-sm-6 pt-3  ">
     <div class="card shadow">
     <div class="mission_user_name">
          <div class="myname">My Mission</div>
