--- a/app/views/missions/_mission.html.erb
+++ b/app/views/missions/_mission.html.erb
@@ -1,4 +1,4 @@
- <div class="col-md-12 pt-3  ">
+ <div class="col-sm-6 pt-3  ">
     <div class="card shadow">
     <div class="mission_user_name">
     <% if user_signed_in? && current_user.id == mission.user.id %>
@@ -58,9 +58,6 @@
         <%= link_to '削除', mission_path(mission.id),method: :delete, class: "btn btn-primary"%>
     <% end %>
 
-  <%# <% @missions.each do |mission| %>
-    <%# (<%= mission.favorited_users.count %>
-   <%# <% end %>  
 <% if user_signed_in? && current_user.id %>
 <% if mission.favorited_by?(current_user) %>
 <%= link_to  mission_favorites_path(mission), method: :delete do %>
