いいね機能の実装2

--- a/app/views/missions/_mission.html.erb
+++ b/app/views/missions/_mission.html.erb
@@ -61,7 +61,7 @@
 
 
 
-    <div class="favorites_buttons_<%= mission.id %>">
+    <div id="favorite_buttons_<%= mission.id %>">
       <%= render "favorites/favorite", mission: mission %>
     </div>
  
