--- a/app/views/favorites/create.js.erb
+++ b/app/views/favorites/create.js.erb
@@ -1,1 +1,1 @@
-$('.favorites_buttons_<%= @mission.id %>').html("<%= j(render "favorites/favorite", mission: @mission) %>");
+$('#favorite_buttons_<%= @mission.id %>').html("<%= j(render "favorites/favorite", mission: @mission) %>");
