ビュー調整(%>の削除）

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,7 +46,7 @@
         <%= form.submit "検索", class: "tn btn-outline-success" %>
       <% end %>
       <div class="contents row">
-        <%# <%= render 'missions/search' %> %>
+        <%# <%= render 'missions/search' %> 
       <%# <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
