タイトル編集

--- a/app/views/missions/index.html.erb
+++ b/app/views/missions/index.html.erb
@@ -2,7 +2,7 @@
 <div>
   <div class="mb-3">
   <% unless user_signed_in? %>
-    <h1 class="mypage-title"></span>addtaskiiへようこそ。使い方はシンプルです。 </h1>  
+    <h2 class="mypage-title"></span>addtaskiiへようこそ。 </h2>  
   <% else %>
     <h1 class="top">Mission List</h1>
   <% end %>
