--- a/app/views/missions/show.html.erb
+++ b/app/views/missions/show.html.erb
@@ -47,6 +47,7 @@
       <p class="card-text text-right"></p>
         <%= link_to '編集', edit_mission_path(@mission.id),method: :get, class: "btn btn-primary"%>
         <%= link_to '削除', mission_path(@mission.id),method: :delete, class: "btn btn-primary"%>
+         <%= link_to '達成', levelup_mission_path(@mission.id),class: "btn btn-success"%>
     <% end %>
 
 
