--- a/app/views/missions/_mission.html.erb
+++ b/app/views/missions/_mission.html.erb
@@ -27,12 +27,14 @@
               </div>
           <div class="alert alert-danger col-6" role="alert">
                   この課題に対する具体的なアクションを設定しないため達成できない可能性があります！
-                  <br>
-                  <% unless mission.tasks.present? %>
+                  
+                   <% if current_user.id == mission.user.id %>
+                   <br>
                    <%= link_to 'タスク設定', mission_path(mission.id),method: :get, class: "btn btn-danger"%>
+                   <br>
                   <% else %>
-                  <br>
-        <% end %>
+                  
+                   <% end %>
           </div>
      </div>  
      <% end %>
