rogin,signupformのビューの調整

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -62,13 +62,7 @@ nav{
 .sannno{
   font-size: 20px;
 }
-.mypage{
- 
-}
-.btn-btn{
 
-
-}
 
 /* 以上マイページ */
 
@@ -110,3 +104,26 @@ nav{
 
 
 /*以上Fight機能色*/
+
+
+/*以下ログインフォーム*/
+.login-form{
+  font-family: 'Poppins', sans-serif;
+}
+.col-md-4{
+  margin-top: 10px;
+}
+.login-form{
+  
+}
+.container-fluid{
+
+}
+/*以下ログインフォーム*/
+
+/*以下登録フォーム*/
+
+.signup-form{
+  font-family: 'Poppins', sans-serif;
+}
+/*以下登録フォーム*/
