--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -36,8 +36,81 @@ nav{
   border: 1px solid lightblue;
   text-align: center;
 }
-.missions{
+.tasks{
+  font-family: 'Poppins', sans-serif;
+  background-color: #D7EEFF;
+  border-radius: 3%;
 }
+/*以下indexページ*/
+.missionset-btn{
+  text-align: end;
+}
+.myname{
+  background-color: #D7EEFF;
+}
+.btn-show{
+  font-family: 'Poppins', sans-serif;
+  border: 1px solid;
+  background-color: #D7EEFF;
+}
+.btn-show:hover{
+  font-family: 'Poppins', sans-serif;
+  border: 1px solid;
+  background-color: white;
+}
+.addtaskbtn{
+  border: 1px solid #000055;
+  border-radius: 6px;
+  padding: 3px;
+  font-family: 'Poppins', sans-serif;
+  background-color: #D7EEFF;
+  color: black;
+}
+.addtaskbtn:hover{
+  font-family: 'Poppins', sans-serif;
+  border-radius: 6px;
+  background-color: white;
+  color: #000055;
+}
+    /*以下達成ボタン*/
+.successbtn{
+  text-align: end;
+  margin-right: 20px;
+  margin-top: -60px; 
+}
+a.btn--orange {
+  font-size: small;
+  font-family: 'Poppins', sans-serif;
+  font-weight: bold;
+  color: #fff;
+  background-color: #000055;
+  border: 3px solid #FFCC00;
+}
+
+a.btn--orange:hover {
+  font-size: small;
+  font-family: 'Poppins', sans-serif;
+  font-weight: bold;
+  color: #000055;
+  background-color: #FFD700;
+  border: 1px solid #000055;
+}
+
+a.btn--shadow {
+  -webkit-box-shadow: 0 3px 5px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+}
+
+a.btn--circle {
+  border-radius: 50%;
+  line-height: 60px;
+  width: 78px;
+  height: 60px;
+  padding: 0;
+}
+    /*以上達成ボタン*/
+
+/*以上indexページ*/
 
 /* 以下navbar */
 .navlist{
@@ -62,6 +135,41 @@ nav{
 .sannno{
   font-size: 20px;
 }
+.usershow-btn{
+  text-align: end;
+}
+.btn-outline{
+  font-family: 'Poppins', sans-serif;
+  border: 1px solid;
+  background-color: #D7EEFF;
+}
+.btn-outline:hover {
+  font-weight: bold;
+  border: 1px solid;
+  background-color: white;
+}
+.usershow-btn{
+  font-family: 'Poppins', sans-serif;
+}
+.setagoalbtn{
+  font-family: 'Poppins', sans-serif;
+  border: 3px solid #000055;
+  background-color: #000055;
+  color: white;
+  border-radius: 50%;
+  padding: 12px;
+}
+.setagoalbtn:hover{
+
+  font-family: 'Poppins', sans-serif;
+  border: 2px solid #FFD700;
+  background-color: #000055;
+  color: white;
+  border-radius: 50%;
+  padding: 12px;
+}
+  
+
 
 
 /* 以上マイページ */
