--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,111 +1,106 @@
-<div class="mypage" >
-
-   <div class="row">
-   <div class="contents row">
-  <h1 class="mypage-title"><%= @name %><span class="sannno">さんの</span>Mision List</h1>
-<% unless user_signed_in? %>
-<% else %>
-  <div class="mb-3">
-    <%= link_to 'missionを設定', new_mission_path, class: "btn btn-primary" %>
-    <%= link_to 'みんなのMission',missions_path, class: "btn btn-success" %>
-    
+<div class="jumbotron">
+<div class="container-fluid">
+  <div class="row">
+     <div class="col-sm-6 pt-3  ">
+       <div>
+          <h1 class="mypage-title"><%= @name %><span class="sannno">さんの</span>Goals</h1>
+       </div>
+     </div>
+     <div class="col-sm-6 pt-3  ">
+           <% unless user_signed_in? %>
+           <% else %>
+              <div class="usershow-btn">
+                 <%= link_to 'set a goal', new_mission_path, class: "setagoalbtn" %>
+                 <%= link_to 'our goals',missions_path, class: "btn btn-success" %>
+              </div>
+          <% end %>
+     </div>
   </div>
-  
-<% end %>
-
+</div>
+<div class="container-fluid">
+  <div class="row">
   <% @missions.each do |mission| %>
-  <div class="col-sm-6 pt-3  ">
-    <div class="card shadow">
-    <div class="mission_user_name">
-         <div class="myname">My Mission</div>
-    </div>
-      <div class="card-body " >
-        <h5 class="card-title"> <%= mission.mission%></h5>
-         <ul class="list-group list-group-flush">
-         <li class="list-group-item">開始日　<%= mission.startdate%></li>
-         <li class="list-group-item">期限　　<%= mission.limitdate%></li>
-         </ul>
-<% if mission.tasks.present? %>
-<% else %>
-<div class="row">
-       <div class="spinner-grow text-danger col-6" role="status">
-         <span class="visually-hidden">いいいいいいい</span>
-       </div>
-       <div class="alert alert-danger col-6" role="alert">
-         この課題に対する具体的なアクションを設定しないため達成できない可能性があります！
-                            <% if current_user.id == mission.user.id %>
-                   <br>
-                   <%= link_to 'タスク設定', mission_path(mission.id),method: :get, class: "btn btn-danger"%>
-                   <br>
+    <div class="col-sm-6 pt-3   ">
+      
+        <div class="card shadow">
+          <div class="mission_user_name">
+              <div class="myname">My goal</div>
+          </div>
+          <div class="card-body " >
+               <h5 class="card-title"> <%= mission.mission%></h5>
+                  <ul class="list-group list-group-flush">
+                       <li class="list-group-item">開始日　<%= mission.startdate%></li>
+                       <li class="list-group-item">期限　　<%= mission.limitdate%></li>
+                  </ul>
+                        <% if mission.tasks.present? %>
+                        <% else %>
+                            <div class="row">
+                               <div class="spinner-grow text-danger col-6" role="status">
+                                   <span class="visually-hidden">いいいいいいい</span>
+                               </div>
+                                <div class="alert alert-danger col-6" role="alert">
+                                      この目標に対する具体的なアクションを設定しないため達成できない可能性があります！
+                                  <% if current_user.id == mission.user.id %>
+                                     <br>
+                                     <%= link_to 'set tasks', mission_path(mission.id),method: :get, class: "btn btn-danger"%>
+                                     <br>
+                                   <% else %>
+                                   <% end %>
+                                 </div>
+                              </div>  
+                          <% end %>
+                        <div class="tasks">
+                            <% if mission.tasks.present? %>
+                              <p><<<  Task list  >>></p>
+                            <% else %>
+                            <% end %> 
+                               <% mission.tasks.each do |t| %>
+                                 <p><%= t.task %></p>
+                               <% end %>
+                         </div>   
+                   <p class="card-text text-right"></p>
+                  <% if user_signed_in? && current_user.id == mission.user.id %>
+                       <% if mission.tasks.present? %>
+                           <%= link_to 'add a task', mission_path(mission.id),method: :get, class: "addtaskbtn"%>
+                       <% else %>
+                           <%# <%= link_to 'タスク設定', mission_path(mission.id),method: :get, class: "btn btn-danger"%> 
+                       <% end %>
                   <% else %>
-                  
+                          <%= link_to '詳細', mission_path(mission.id),method: :get, class: "btn btn-success"%>
+                  <% end %>
+                <% if mission.favorites.count > 0 %>
+                     <i class="bbtn bi-megaphone success">
+                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-wind" viewBox="0 0 16 16">
+                       <path d="M12.5 2A2.5 2.5 0 0 0 10 4.5a.5.5 0 0 1-1 0A3.5 3.5 0 1 1 12.5 8H.5a.5.5 0 0 1 0-1h12a2.5 2.5 0 0 0 0-5zm-7 1a1 1 0 0 0-1 1 .5.5 0 0 1-1 0 2 2 0 1 1 2 2h-5a.5.5 0 0 1 0-1h5a1 1 0 0 0 0-2zM0 9.5A.5.5 0 0 1 .5 9h10.042a3 3 0 1 1-3 3 .5.5 0 0 1 1 0 2 2 0 1 0 2-2H.5a.5.5 0 0 1-.5-.5z"/>
+                     </svg>
+                       <%= mission.favorites.count  %> We can do it!!</i>
+                <% else %>
+                       <i class="unbtn bi-megaphone">
+                       <%= mission.favorites.count %> We can do it</i>
+                 <% end %>
+                 <div class="editdeletebtn mt-3">
+                  <% if user_signed_in? && current_user.id == mission.user.id %>
+                      <div class="btn-group btn-group-sm" role="group" aria-label="Basic outlined example">
+                          <%= link_to 'edit', edit_mission_path(mission.id),method: :get, class: "btn btn-outline"%>
+                          <%= link_to 'delete', mission_path(mission.id),method: :delete, class: "btn btn-outline"%>
+                      </div>
+                        <% if mission.tasks.present? %>
+                         <div class="successbtn">
+                          <%= link_to 'Achieved!', levelup_mission_path(mission.id),class: "btn btn--orange btn--circle btn--circle-a btn--shadow"%>
+                         </div>
+                         <% end %>
                    <% end %>
-      </div>
-</div>  
-<% end %>
-      <div class="tasks">
-       <% if mission.tasks.present? %>
-       <p>＜タスク一覧＞</p>
-       <% else %>
-      
-       <% end %>
-      
-      <% mission.tasks.each do |t| %>
-         <p>
-           <%= t.task %>
-        </p>
-      <% end %>
-     </div>   
- 
-  
-
-        <p class="card-text text-right"></p>
-  <% if user_signed_in? && current_user.id == mission.user.id %>
-        <% if mission.tasks.present? %>
-          <%= link_to 'タスクを追加', mission_path(mission.id),method: :get, class: "btn btn-primary"%>
-        <% else %>
-          <%# <%= link_to 'タスク設定', mission_path(mission.id),method: :get, class: "btn btn-danger"%> 
-        <% end %>
-  <% else %>
-          <%= link_to '詳細', mission_path(mission.id),method: :get, class: "btn btn-success"%>
-  <% end %>
-
-    <% if user_signed_in? && current_user.id == mission.user.id %>
-
-        <%= link_to '編集', edit_mission_path(mission.id),method: :get, class: "btn btn-primary"%>
-        <%= link_to '削除', mission_path(mission.id),method: :delete, class: "btn btn-primary"%>
-        <%= link_to '達成', levelup_mission_path(mission.id),class: "btn btn-success"%>
-    <% end %>
-
-  <%# <% @missions.each do |mission| %>
-    <%# (<%= mission.favorited_users.count %>
-   <%# <% end %>  
-
-
-
-    <% if mission.favorites.count > 0 %>
-      <i class="bbtn bi-megaphone success">
-      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-wind" viewBox="0 0 16 16">
-        <path d="M12.5 2A2.5 2.5 0 0 0 10 4.5a.5.5 0 0 1-1 0A3.5 3.5 0 1 1 12.5 8H.5a.5.5 0 0 1 0-1h12a2.5 2.5 0 0 0 0-5zm-7 1a1 1 0 0 0-1 1 .5.5 0 0 1-1 0 2 2 0 1 1 2 2h-5a.5.5 0 0 1 0-1h5a1 1 0 0 0 0-2zM0 9.5A.5.5 0 0 1 .5 9h10.042a3 3 0 1 1-3 3 .5.5 0 0 1 1 0 2 2 0 1 0 2-2H.5a.5.5 0 0 1-.5-.5z"/>
-      </svg>
-      <%= mission.favorites.count  %> We can do it!!</i>
-    <% else %>
-      <i class="unbtn bi-megaphone">
-      <%= mission.favorites.count %> We can do it</i>
-    <% end %>
-
-
-
-
+                  </div>
+             </div>
        </div>
+    
     </div>
+    <% end %>
   </div>
+</div>
 
-
-  <% end %>
-
+  
         <%# <%= render partial: "mypage", collection: @missions %> 
 
-  </div>
 </div>
 </div>
