--- a/app/views/missions/_mission.html.erb
+++ b/app/views/missions/_mission.html.erb
@@ -28,7 +28,7 @@
               <div class="spinner-grow text-danger col-6" role="status">
                  <span class="visually-hidden"></span>
               </div>
-             <div class="alert alert-danger col-6" role="alert">
+             <div class="alert alert-danger col-sm-12 " role="alert">
                   この目標に対する具体的なアクションを設定しないため達成できない可能性があります！
                   
                    <% if current_user.id == mission.user.id %>
