--- a/app/views/missions/_form.html.erb
+++ b/app/views/missions/_form.html.erb
@@ -1,23 +1,23 @@
     <%= form_with(model: @mission, local: true) do |form| %>
-         <div class="row">
+         <div class="row justify-content-md-center">
           <div class="col-md-4">
             <label  class="form-label">達成したい目標は？</label>
             <%= form.text_field :mission, class:"form-control",placeholder: "例:勉強に集中できない", rows: "10" %>
           </div>
          </div>
-         <div class="row">
+         <div class="row justify-content-md-center">
           <div class="col-md-4">
               <label  class="form-label">いつから？</label>
               <%= form.date_field :startdate,class:"form-control", placeholder: "始まり" %>
           </div>
          </div>
-         <div class="row">
+         <div class="row justify-content-md-center">
           <div class="col-md-4">
                <label  class="form-label">いつまでに</label>
                <%= form.date_field :limitdate,class:"form-control", placeholder: "期限" %>
           </div>
          </div>
-         <div class="row">
+         <div class="row justify-content-md-center">
           <div class="col-md-4">
             <%= form.submit "SEND",class: "setagoalbtn" %>
           </div>
