--- a/app/views/missions/new.html.erb
+++ b/app/views/missions/new.html.erb
@@ -1,6 +1,10 @@
-<div class="contents row">
-  <div class="container-fluid">
+<div class="contents">
+  <div class="container align-self-center">
     <h3></h3>
-    <%= render partial: "form", locals: { mission: @mission } %>
+    <div class="set-goalform">
+      <%= render partial: "form", locals: { mission: @mission } %>
+    </div>
+        <div class="pokopoko"></div>
+        <div class="pokopoko2"></div>
   </div>
 </div>
