--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -3,6 +3,8 @@
 <div class="contents row">
   <div class="container">
     <h3>タスク設定画面</h3>
+    <div class="task-form">
     <%= render partial: "taskform", locals: { task: @task } %>
   </div>
+</div>
 </div>
