--- a/app/views/missions/_mission.html.erb
+++ b/app/views/missions/_mission.html.erb
@@ -17,10 +17,10 @@
          <% end %>
        </div>
     <div class="card-body " >
-        <h5 class="card-title"> <%= mission.mission%></h5>
+        <h5 class="card-title mb-4"> <%= mission.mission%></h5>
          <ul class="list-group list-group-flush">
-         <li class="list-group-item">開始日　<%= mission.startdate%></li>
-         <li class="list-group-item">期限　　<%= mission.limitdate%></li>
+         <li class="list-group-item">start　　<%= mission.startdate%></li>
+         <li class="list-group-item">end  　　<%= mission.limitdate%></li>
          </ul>
         <% if mission.tasks.present? %>
         <% else %>
@@ -40,7 +40,7 @@
               </div>
            </div>  
          <% end %>
-        <div class="tasks mt-2">
+        <div class="tasks">
            <% if mission.tasks.present? %>
            <p><<<  Task list  >>></p>
            <% else %>
