--- a/app/views/missions/edit.html.erb
+++ b/app/views/missions/edit.html.erb
@@ -1,7 +1,11 @@
 <div class="contents row">
-  <div class="container">
+  <div class="container align-self-center">
     <h3></h3>
-    <%= render partial: "editform", locals: { tweet: @mission } %>
+     <div class="set-goalform">
+       <%= render partial: "editform", locals: { tweet: @mission } %>
+     </div>
+        <div class="pokopoko"></div>
+        <div class="pokopoko2"></div>
   </div>
 </div>
 
