--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -27,10 +27,10 @@
               <div class="myname">My goal</div>
           </div>
           <div class="card-body " >
-               <h5 class="card-title"> <%= mission.mission%></h5>
+               <h5 class="card-title mb-4"> <%= mission.mission%></h5>
                   <ul class="list-group list-group-flush">
-                       <li class="list-group-item">開始日　<%= mission.startdate%></li>
-                       <li class="list-group-item">期限　　<%= mission.limitdate%></li>
+                       <li class="list-group-item">start　　<%= mission.startdate%></li>
+                       <li class="list-group-item">end  　　<%= mission.limitdate%></li>
                   </ul>
                         <% if mission.tasks.present? %>
                         <% else %>
