ランキング一覧ビュー作成（仮作成）

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -286,3 +286,15 @@ a.btn--circle {
     border-radius: 3%;
   }
 /*以上タスクフォーム*/
+
+/*以下ランキングページ*/
+.ranks{
+  background-color: #FFFFE0;
+}
+ .rank-jumbotron{
+   border: 1px solid black;
+ }
+ .ranking{
+   text-align: end;
+ }
+/*以上ランキングページ*/
